Fixed background issue on mobile

--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
-html, body {
-  height: 100vh;
-  width: 100vw;
+@media only screen and (min-width: 455px) {
+  .splash-page{
+    background: url(images/bobby-hendry-304875-unsplash.jpeg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 }
-
 .splash-page{
-  background: url(images/bobby-hendry-304875-unsplash.jpeg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -119,6 +118,10 @@ i.material-icons:hover{
 }
 
 @media only screen and (max-width: 455px){
+  html, body{
+    height: 100vh;
+    body:100vw;
+  }
 
   a.brand-logo{
     display: none;
@@ -136,8 +139,9 @@ i.material-icons:hover{
   }
 
   .splash-page{
-    height: 100vh;
-    width: 100vw;
+    background-image: url(images/mobile-bobby-hendry-304875-unsplash.png);
+    background-position: center;
+    background-size: cover;
   }
 
   .img1, .img2, .img3, .img4, .img5{
